the numbers are aligned on reporting page and formatted correctly, next step is when clicked changing everything then a scroll function

--- a/src/App.css
+++ b/src/App.css
@@ -1559,5 +1559,5 @@ h1, h4, h5 {
 /* end of loading dots */
 .dropDownList{
   display:flex;
-  justify-content:flex-start;
+  justify-content:flex-end;
 }
